--- a/main.tex
+++ b/main.tex
@@ -328,7 +328,7 @@ oscillatory bounce has a frequency about $10^{104}Hz $ \cite{Sanchez2}.
 The tachyonic hypothesis is consistent with the non-local character of quantum mechanics. The
 matter-antimatter flickering respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry.
 
-\subsubsection{Single Electron Cosmology}
+\subsection{Single Electron Cosmology}
 
 The single-electron cosmology \cite{Sanchez1} uses the electron indeterminacy, which is the real basis of the
 Exclusion Principle, giving an horizon value $R_1$ only dependent of the Hydrogen radius $a^{\prime} = aH/p$, by respect to $\lambdabar_e$. 
@@ -360,7 +360,7 @@ associated with the photon mass. With the above value, it is $m_{ph} = \lambdaba
 $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $kg.
 The ratios with electron mass (Fig.1) corresponds respectively to n = 24 and $n = \Gamma$, the Atiyah constant, see Section 4.8, while the ratio $M/m_{ph} \approx (3/e)O^2_M$, to 0.1\%, with the cardinal order $O_M$ of the Monster group.
 
-\subsubsection{The Kotov Cosmic Coherent Oscillation Period}
+\subsection{The Kotov Cosmic Coherent Oscillation Period}
 
 The Kotov non-Doppler cosmic oscillation \cite{Sanchez1} is not considered seriously, since it seems to
 violate the most basic prerequisite of physics, the generality of Doppler phenomena. Interpreting
@@ -395,7 +395,7 @@ G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 \end{array}$$
 This value will be confirmed, in the ppb range, in Section 4.
 
-\subsubsection{Kotov cycle omnipresence in astrophysics}
+\subsection{Kotov cycle omnipresence in astrophysics}
 
 With $t = R/c$, the relation $(t t_{K}^2)^{1/3} \approx 10.8$ years, compatible with the famous 11 years sun period
 was noted. It was proposed that this unexplained phenomena, responsible for moderate periodic
@@ -492,7 +492,7 @@ at nearly $3.9\theta$ significance (after Kotov, 2018).}
 \label{fig:figure_label}
 \end{figure}
 
-\subsubsection{The Tifft, Arp and the Pioneer effects}
+\subsection{The Tifft, Arp and the Pioneer effects}
 
 Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this
 speed corresponds to the quantum resonance $$\nu_{n} = nv_{1} =n\hbar /r_{e} m_{F} $$ where $r_{e} = \lambdabar_e/a$ is the electron classical radius and $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass, close to the mean DNA nucleotide mass \cite{Sanchez1}.
