--- a/main.tex
+++ b/main.tex
@@ -129,11 +129,9 @@ periodicity 8 [19] which is at the origin of the name `Topological Axis`.
 \label{fig:figure_label}
 \end{figure*}
 
-\section {Internal Fine Tuning and Canonical Large Numbers}
-We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics.
-\subsection {The Cosmic Fine-Tuning and the Topological Axis}
+\section {The Cosmic Fine-Tuning and the Topological Axis}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-
+We look here for a systematic organization of dimensionless physical quantities stemming from cosmology, astrophysics, particle   physics, theoretical physics and mathematics.
 The most famous fine tuning implies cosmic quantities, awkwardly called the `Double
 Large Number Problem`. If it is a `problem` for standard evolutionary cosmology, it is a precious
 clue in steady-state cosmology based on the \textit{Perfect} Cosmological Principle (spatial \textit{and} temporal homogeneity).
