--- a/main.tex
+++ b/main.tex
@@ -290,19 +290,6 @@ Mm_p = m_P^4/m_em_H\approx(10N_{Ed}/3)m_Hm_n
 \end{equation}
 showing a kind of symmetry between the Particle masses.
 
-In the gravitational hydrogen molecule model, $R$ is defined by the following 1D-2D Special
-Holographic Relation, using the wavelengths of the electron, proton and hydrogen, while the background wavelength appears in the 3D term involving the molecular Hydrogen wavelength:
-\begin{equation}
-2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P}^2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}
-\end{equation}
-The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
-background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
-This eliminates $l_{P}$, producing a relation independent of $G$, implying $T_{CMB} \approx 2.725820805$ Kelvin:
-$$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
-which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
-the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 4). Recall
-that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
-the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
 
 Coming back to the central mass relation:
 \begin{equation}
@@ -645,6 +632,23 @@ where appear the masses of the heavy leptons (Section 4.6). This implies a drama
 
 \section{Special holographic relations}
 
+
+\subsection{The Cosmic Temperature}
+
+In the gravitational hydrogen molecule model, $R$ is defined by the following 1D-2D Special
+Holographic Relation, using the wavelengths of the electron, proton and hydrogen, while the background wavelength appears in the 3D term involving the molecular Hydrogen wavelength:
+\begin{equation}
+2 \pi R/\lambdabar_{e} = 4 \pi \lambdabar_{p} \lambdabar_{H} /l_{P}^2 \simeq (4\pi/3)(\lambdabar_{CMB} /\lambdabar_{H2})^{3}
+\end{equation}
+The above relation gives $T_{CMB} \simeq 2.73 K$. With the measured temperature of the cosmic
+background, there is a small gap compatible with $(H/p_G)^2 p/6\pi^5 $, where $p_{G}^{2} = P^{2} /2^{127}$ , with $P = \lambdabar_{e} /l_{P}$. 
+This eliminates $l_{P}$, producing a relation independent of $G$, implying $T_{CMB} \approx 2.725820805$ Kelvin:
+$$2^{127} = 2\pi^{2} \lambda_{CMB}^{3} /\lambdabar_{e} \lambdabar_{H}^2$$
+which is the area of the 4-sphere of radius $\lambda_{CMB} / \lambdabar_{m}$, where $\lambdabar_{m} = (\lambdabar_{e} \lambdabar_{H}^2)^{1/3} $ proving the relevance of
+the Lenz-Wyler approximation for the Proton/Electron mass ratio $p = 6\pi^{5}$, (see Section 4). Recall
+that $2^{127} - 1$ is the most famous prime number in the history of Mathematics, being the last term of
+the Combinatorial Hierarchy \cite{Sanchez1} of special imbricated Mersenne numbers 3, 7, 127, the sum of which is 137.
+
 \subsection{The Conservation of Information}
 
 The Grandcosmos holographic reduction radius $R^{\prime}$ shows itself an overwhelming holographic
@@ -665,6 +669,8 @@ the Planck length as unit.
 So, while General Relativity and Unitary Quantum physics disagree about the nature of Space-Time, specially the non-locality phenomena, they agree for complete determinism, leading to the collapse of the
 Copenhagen statistical interpretation. The hidden variables exist really: it is the Cosmos ! Heisenberg
 relations would be only Fourier transform manifestations of Wave Mechanics.
+
+
 
 \section{Intermediate Mathematical Constants}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
