--- a/main.tex
+++ b/main.tex
@@ -290,7 +290,6 @@ Mm_p = m_P^4/m_em_H\approx(10N_{Ed}/3)m_Hm_n
 \end{equation}
 showing a kind of symmetry between the Particle masses.
 
-
 Coming back to the central mass relation:
 \begin{equation}
 m_{P}^{4}\, = M m_{e} m_{p} m_{H}
@@ -307,6 +306,23 @@ to the above 'topon'
 $$\lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s$$
 is the new candidate for the `Chronon`, the `quantum of time`, so the
 oscillatory bounce has a frequency about $10^{104}Hz $ \cite{Sanchez2}.
+
+Coming back to the central mass relation:
+\begin{equation}
+m_{P}^{4}\, = M m_{e} m_{p} m_{H}
+\end{equation}
+this directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except
+that it is close to the mass of the human ovocyte \cite{Sanchez1}. In this way, the local inertia is related to the distant
+masses, in accordance with the Mach principle, which the relativity theory does not explain.
+Another shortcoming of this theory is that it does not define any inertial frame. However, the
+Doppler assymmetry of the cosmic background indicates that the speed of our local group of galaxies is about
+630 km/s. The cosmic background is therefore tied to the Newton absolute frame, the Grandcosmos.
+
+The mathematical continuity is excluded by the above Computation Principle, so the time associated
+to the above 'topon' 
+$$\lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s$$
+is the new candidate for the `Chronon`, the `quantum of time`, so the
+oscillatory bounce has a frequency.
 
 \section{Tachyonic Flickering Space-Time-Matter}
 
