--- a/main.tex
+++ b/main.tex
@@ -98,7 +98,22 @@ So, when Proust and Dalton found whole numbers in chemical reactions, they were 
 \subsection{Plan}
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
 
-The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. We consider mainly the famous large prime number 2$^{127}\!$-1, the Eddington's large number 136 $\times$ 2$^{256}\!$ and the cardinal order $O_M$ of the Monster group. The second section will study intermediate mathematical constants, that of Eddington (137),  Bizouard ($f$), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), and Matthieu ($g_0$ = 7920). The third Section involves in addition the classical constants $\pi$ and $\gamma$. 
+The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. We consider mainly the famous large prime number 2$^{127}\!$-1, the Eddington's large number 136 $\times$ 2$^{256}\!$ and the cardinal order $O_M$ of the Monster group. The second section will study intermediate mathematical constants, that of Eddington (137),  Bizouard ($f$), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), and Matthieu ($g_0$ = 7920). The third Section involves in addition the classical constants $\pi$ and $\gamma$.
+1. Determinatistic Computation and Hiérarchy Principle
+1.1 Plan
+2. The cosmoc Fine-Tuning and the Topological Axis
+
+2. The cosmoc Fine-Tuning and the Topological Axis
+
+2. The cosmoc Fine-Tuning and the Topological Axis
+
+2. The cosmoc Fine-Tuning and the Topological Axis
+
+2. The cosmoc Fine-Tuning and the Topological Axis
+
+2. The cosmoc Fine-Tuning and the Topological Axis
+
+
 
 
 
@@ -306,23 +321,6 @@ to the above 'topon'
 $$\lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s$$
 is the new candidate for the `Chronon`, the `quantum of time`, so the
 oscillatory bounce has a frequency about $10^{104}Hz $ \cite{Sanchez2}.
-
-Coming back to the central mass relation:
-\begin{equation}
-m_{P}^{4}\, = M m_{e} m_{p} m_{H}
-\end{equation}
-this directly involves Planck's mass $m_{P}$, which at the present time, has no known interpretation, except
-that it is close to the mass of the human ovocyte \cite{Sanchez1}. In this way, the local inertia is related to the distant
-masses, in accordance with the Mach principle, which the relativity theory does not explain.
-Another shortcoming of this theory is that it does not define any inertial frame. However, the
-Doppler assymmetry of the cosmic background indicates that the speed of our local group of galaxies is about
-630 km/s. The cosmic background is therefore tied to the Newton absolute frame, the Grandcosmos.
-
-The mathematical continuity is excluded by the above Computation Principle, so the time associated
-to the above 'topon' 
-$$\lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s$$
-is the new candidate for the `Chronon`, the `quantum of time`, so the
-oscillatory bounce has a frequency.
 
 \section{Tachyonic Flickering Space-Time-Matter}
 
