--- a/main.tex
+++ b/main.tex
@@ -114,6 +114,12 @@ The first section explains, by the Holographic Principle, \textit{why large numb
 2. The cosmoc Fine-Tuning and the Topological Axis
 
 
+2. The cosmoc Fine-Tuning and the Topological Axis
+
+
+2. The cosmoc Fine-Tuning and the Topological Axis
+
+
 
 
 
