--- a/main.tex
+++ b/main.tex
@@ -76,6 +76,55 @@ The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, impl
 
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}{\thepage}
 
+\subsection{Plan}
+%This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and %the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the %Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
+
+%The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the %Cosmos vastness. We consider mainly the famous large prime number 2$^{127}\!$-1, the Eddington's large number 136 $\times$ %2$^{256}\!$ and the cardinal order $O_M$ of the Monster group. The second section will study intermediate mathematical %constants, that of Eddington (137),  Bizouard ($f$), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), and Matthieu %($g_0$ = 7920). The third Section involves in addition the classical constants $\pi$ and $\gamma$.
+
+1. Determinatistic Computation and Hierarchy Principle
+
+2. The Cosmic Fine-Tuning and the Topological Axis
+
+3. Toponic Holographic Quantification
+
+4. Tachyonic Flickering Space-Time-Matter}
+   4.1. Single Electron Cosmolopgy
+   4.2. The Coherent Cosmic Oscillation
+   4.3. Kotov observations
+   4.4 Tifft, Arp and Pionner effects
+   
+5. The Logic of Dimensional Analysis
+
+6. The cosmoc Fine-Tuning and the Topological Axis
+
+2. Arithmetical Logic: Holic Principle
+
+7. The Special Holographic Relations
+   7.1 the CosmicSpecial Holographic Relation
+   Conservation of Information
+   
+8. Fine-Tuning with Intermediary Mathematical Constants
+   8.1. Eddington's constant 137
+   8.2. Atiyah and syterheimer constants
+   8.3. Ubiquity of $a^a$
+   8.4. The Sporadic Groups
+   
+ 9. fine-Tuning with basic mathematical constants
+   9.1. Otimal Basis $e$ confirmed
+   9.2. Wyler's Approach
+   9.3. Archimedes 
+   9.4. Electroweak
+   9.5. Heavy Leptons
+   9.6. Gravitation
+   9.7. GThe central role of atiyah's constant
+   
+ 10. Discussion
+ 
+ 11. Conclusions: Cosmic Simplicity at work
+ 
+ 12. Predictions
+    
+
 \section{Deterministic Computation and Hierarchy Principle}
 It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
@@ -95,29 +144,6 @@ The fact that three parameters, among of about 30, are so clearly emerging means
 
 So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in Biology, he anticipated genetics. In the same manner, this article prefigures \textit{the fundamental theory which must be based on arithmetics,} being in fact a characteristic of deterministic computation, which could proceed by optimal algorithms, probably in liaison with the above Hierarchy Principle.
 
-\subsection{Plan}
-This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
-
-The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. We consider mainly the famous large prime number 2$^{127}\!$-1, the Eddington's large number 136 $\times$ 2$^{256}\!$ and the cardinal order $O_M$ of the Monster group. The second section will study intermediate mathematical constants, that of Eddington (137),  Bizouard ($f$), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), and Matthieu ($g_0$ = 7920). The third Section involves in addition the classical constants $\pi$ and $\gamma$.
-1. Determinatistic Computation and Hiérarchy Principle
-1.1 Plan
-2. The cosmoc Fine-Tuning and the Topological Axis
-
-2. The cosmoc Fine-Tuning and the Topological Axis
-
-2. The cosmoc Fine-Tuning and the Topological Axis
-
-2. The cosmoc Fine-Tuning and the Topological Axis
-
-2. The cosmoc Fine-Tuning and the Topological Axis
-
-2. The cosmoc Fine-Tuning and the Topological Axis
-
-
-2. The cosmoc Fine-Tuning and the Topological Axis
-
-
-2. The cosmoc Fine-Tuning and the Topological Axis
 
 
 
@@ -244,7 +270,7 @@ In the steady-state cosmology, such a repulsive force between galaxy groups is n
 order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group,
 another evacuation mechanism must occur: \textit{it would be the role of massive black holes}.
 
-\section{Cosmic Holography and Toponic Quantification}
+\section{Toponic Holographic Quantification}
 
 In the steady-state cosmologic model of Bondi, Gold and Hoyle \cite{Sanchez1}, the Perfect Cosmological
 Principle implies the invariance of the Universe mean mass density $\rho$ and the exponential recession
