--- a/main.tex
+++ b/main.tex
@@ -76,7 +76,7 @@ The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, impl
 
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}{\thepage}
 
-\subsection{Plan}
+
 This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
 
 The first section explains, by the Holographic Principle, \textit{why large numbers are necessary}, so justifying at last the Cosmos vastness. We consider mainly the famous large prime number 2$^{127}\!$-1, the Eddington's large number 136 $\times$ 2$^{256}\!$ and the cardinal order $O_M$ of the Monster group. The second section will study intermediate mathematical constants, that of Eddington (137),  Bizouard ($f$), Green-Schwarz (496), Atiyah ($\Gamma$), Sternheimer ($j$), and Matthieu ($g_0$ = 7920). The third Section involves in addition the classical constants $\pi$ and $\gamma$.
@@ -88,9 +88,13 @@ The first section explains, by the Holographic Principle, \textit{why large numb
 3. Toponic Holographic Quantification
 
 4. Tachyonic Flickering Space-Time-Matter}
+
    4.1. Single Electron Cosmolopgy
+   
    4.2. The Coherent Cosmic Oscillation
+   
    4.3. Kotov observations
+   
    4.4 Tifft, Arp and Pionner effects
    
 5. The Logic of Dimensional Analysis
@@ -100,23 +104,37 @@ The first section explains, by the Holographic Principle, \textit{why large numb
 2. Arithmetical Logic: Holic Principle
 
 7. The Special Holographic Relations
+
    7.1 the CosmicSpecial Holographic Relation
-   Conservation of Information
+   
+   7.2. Conservation of Information
+  
    
 8. Fine-Tuning with Intermediary Mathematical Constants
+
    8.1. Eddington's constant 137
+   
    8.2. Atiyah and syterheimer constants
+   
    8.3. Ubiquity of $a^a$
+   
    8.4. The Sporadic Groups
    
  9. fine-Tuning with basic mathematical constants
+ 
    9.1. Otimal Basis $e$ confirmed
+   
    9.2. Wyler's Approach
-   9.3. Archimedes 
+   
+   9.3. Archimedes
+   
    9.4. Electroweak
+   
    9.5. Heavy Leptons
+   
    9.6. Gravitation
-   9.7. GThe central role of atiyah's constant
+   
+   9.7. The central role of atiyah's constant
    
  10. Discussion
  
