--- a/main.tex
+++ b/main.tex
@@ -1280,6 +1280,7 @@ In short, the rediscovered cosmos unifies the two main modern cosmologies in a r
 antimatter oscillatory bounce. The Cosmos appear as \textit{simple, unique, permanent, computational,
 deterministic, trans-planckian, cyclic, topological and inverse-anthropic}.
 
+\section{Predictions}
 It is now clear that present mathematics and Particle Physics are incomplete, and this Coherent Cosmology announces a reunification of \textit{Philosophy, Mathematics, Physics, Chemistry, Informatics and Biology}. In particular, the pre-Socratic Parmenide philosophy of Permanence must be reconsidered favorably. Eddington's Fundamental Theory must be revisited, specially the genesis of his Large Number, so clearly tied to the $16 \times 16$ symmetric matrix.
 
       This article leads to some predictions:
