--- a/main.tex
+++ b/main.tex
@@ -99,9 +99,7 @@ PLAN
    
 5. The Logic of Dimensional Analysis
 
-6. The cosmoc Fine-Tuning and the Topological Axis
-
-2. Arithmetical Logic: Holic Principle
+6. Arithmetical Logic: Holic Principle
 
 7. The Special Holographic Relations
 
@@ -143,9 +141,9 @@ PLAN
     
 
 \section{Deterministic Computation and Hierarchy Principle}
-It was observed \cite{Grosmann} that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Eddy}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
+It was observed that the physical constants are tightly contrived, but only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Eddy}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.41 ppb precision. By contrast, the gravitational coupling constant $a_{G}$ was neither well defined nor measured, due to the relatively large imprecision on $G$ measurement 10$^{-4}\!$.
 
-One can read \cite{Carr}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
+One can read \cite{Eddy}: \textit{“For example, the size of a planet is the geometric mean of the size of the Universe and the size of an atom; the mass of man is the geometric mean of the mass of a planet and the mass of a proton. Such relationships, as well as the basic dependences on $a$ and $a_G$ from which they derive, might be regarded as coincidences if one does not appreciate that they can be deduced from known physical theory, with the exception of the Universe, which cannot be explained directly from kwown physics... This line of arguments, which is discussed later, appeals to the 'anthropic principle'.”}
 
 The existence of relations that are not explained by known physical theories, is called 'natural fine tuning' phenomena. But, as soon as it involves the observable Universe radius, it signals the existence of a more fundamental theory that must take into account the \textit{antique Cosmos concept, which, as Eddington claimed first \cite{Eddy}, must be permanent}. Extending this to the spatial homogeneity, this leads to the Perfect Cosmological Principle, the very foundation of the steady-state cosmology, the basis of Coherent Cosmology \cite{Sanchez1}.
 
@@ -1422,7 +1420,7 @@ Compt. Rend. Acad. Sci. Paris 305, Ser. II, 349--352 (1987).
 
 \bibitem{Atiyah2} Atiyah M. Private communication (December 2018).
 
-\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. 01.1979
+%\bibitem{Grosmann} Grosmann, Michel and Meyrueis, Patrick. ``Optics and Photonics Applied to Communication and Processing''. 01.1979
 
 %\bibitem{34} Grosmann, M and Rebordão, José and Meyrueis, Patrick. Propagation Of Waves In Optical Systems: Reformulation Of Huyghens Principle For Aspheric Systems. Proceedings of SPIE - The International Society for Optical Engineering. DOI 10.1117/12.968010. 02.1985
 
