--- a/main.tex
+++ b/main.tex
@@ -927,22 +927,13 @@ a series converging very much rapidly than the classical Euler's one $(1+1/n)^n$
 
 The canonical ratio $R_{GC}/\lambdabar_M = 2P^9/a^6pH $ confirms the Extended Holographic Principle, to 0.04 \%:
 \begin{equation}
-R_{GC}/\lambdabar_M  = (e_{GC}^2)^{210}  \approx (137e/a)^{420}  
+R_{GC}/\lambdabar_M  \approx (137e/a)^{420}  
 \end{equation}
 exhibiting the following property (0.3 ppm):
  $$ (a/137)^{420} \approx (137 - 3)/120 $$  
-with $137 - 3 = 7 + 127$ are the Combinatorial Hierarchy terms, while $e_{GC}$ is compatible with the following rational number, in the ppb range, and tied to the heavy Leptons mass ratios by, to 3 ppm:
-$$(a/137)e_{GC} \approx (48 \times 787)/(13 \times 1069) \approx (a\mu/3\tau) (e/2)^{1/420}$$
-This is a dramatic confirmation of the cosmical use of rational approximation of $e$, explaining the cosmos vastness (Section 2.2), and enligthting a double relation of $\mu$ and $\tau$ with $e$, to 0.01 \% and 0.06 \%:
-\begin{equation}
-ln\tau \approx 3e \approx a\mu/\tau 
-\end{equation}
-These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm:
-\begin{equation}
-2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
-\end{equation}
-where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
-The above study of fractional development of $e$ leads to the following relation between $a$ and the Electron magnetic moment $2d_e$, in the ppb range: :$$a(e/2d_e-1) \approx 7^2-1/4d_e(496+1)$$ Note that $496 + 1 = 7 \times 71$, showing the largest prime 71 in the Monster cardinal.
+with $137 - 3 = 7 + 127$ are the Combinatorial Hierarchy terms, 
+
+
 
 
 \subsection {Wyler's approach}
@@ -1074,6 +1065,16 @@ term $1+1/\sqrt{a}$, central in quantum electrodynamics to 0.1 ppm:
 1+1/\sqrt{a} \approx \tau^{3} H/pD^{2}
 \end{equation}
 This Koide relation, quite discarded by the scientific community, is another sign of the serious incompleteness of present Particle Physics standard model
+
+Note the double relation of $\mu$ and $\tau$ with $e$, to 0.01 \% and 0.06 \%:
+\begin{equation}
+ln\tau \approx 3e \approx a\mu/\tau 
+\end{equation}
+These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm:
+\begin{equation}
+2/\delta = 2a^3/pH \approx ln(pH)/2d_e lna \approx (ln\tau/ln\mu)/d_e^2 \approx d_e^2 ln s/ln\tau
+\end{equation}
+where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
 
 %%\subsection {The Intermediate Bosons mathematical fine tuning}
 
