--- a/main.tex
+++ b/main.tex
@@ -811,6 +811,18 @@ Thus, the term $F^3/a$ seems special. More precisely, with the reduced Hydrogen 
 \end{equation}
 confirming that $j$ and $\Gamma$ has the status of invariant generalised dimension, i.e., as privileged exponents. This call for further study.
 
+Note that (Fig 1.):
+\begin{equation}
+m_{e} c^{2} f(\gamma\Gamma) \approx 125.175 GeV
+\end{equation}
+seems compatible with the Higgs Boson energy, it is interesting to note the match with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx (4\pi + 2) (p/d_e p_0)^2 $$ to 30ppb.
+The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and $c$ times the Milankovich cycle. One observes also, to 0.16 \%, 1.8 ppm and 10 ppb:
+$$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2 \approx (16/ln2)d_e \beta p/p_0$$
+meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n \approx \Gamma$.
+One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
+$$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}\approx (a/137)^{1/2} F^{10/3\sqrt{a}}$$
+(1.8 ppm), confirming Atiyah's symmetry between $\pi$ and $a$, the role of the dimension 496, and the pertinence of the 20th power of $F$, corresponding to the 20 normal amino-acids.  
+
 \subsection{Ubiquity of $a^{a}$}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
@@ -1115,17 +1127,7 @@ Now, as was recalled previously in the Holic Principle, the exponents represent 
 dimensions. So, this correlates to a dimensional reduction, eliminating 137, from 9D and 6D to
 3D, which could be associated with the superstring theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances \cite{Polchinski}.
-Bearing in mind that:
-\begin{equation}
-m_{e} c^{2} f(\gamma\Gamma) \approx 125.175 GeV
-\end{equation}
-is compatible with the Higgs Boson energy, it is interesting to note the perfect match with the dimension index $k \approx \pi$, leading to $$\gamma\Gamma \approx 4\pi + 2$$
-The length $\lambdabar_{e} f(\Gamma) \approx 5\times 10^{5}$ light-years is characteristic of a galaxy group radius, and $c$ times the Milankovich cycle. One observes also, to 0.16 \%, 1.8 ppm and 10 ppb:
-$$e^\pi \approx (\Gamma - 2)/d_e \approx a_w^{1/f}/d_e^2 \approx (16/ln2)d_e \beta p/p_0$$
-meaning that the special value in the Topological Axis $k = e^{\pi} /4 \approx 4/ln2$ corresponds to $n \approx \Gamma$.
-One notes also, for the Pions mass ratios, in their 5 ppm uncertainty:
-$$a/\pi\approx 496^2/137\Pi_0^{2/3} \approx p\beta^2/\Pi_+^{2/3}\approx (a/137)^{1/2} F^{10/3\sqrt{a}}$$
-(1.8 ppm), confirming Atiyah's symmetry between $\pi$ and $a$, the role of the dimension 496, and the pertinence of the 20th power of $F$, corresponding to the 20 normal amino-acids.  
+
 
 \section {Discussion}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
