--- a/main.tex
+++ b/main.tex
@@ -60,7 +60,7 @@ $^9$Lecturer at Ecole Nationale Superieure d'Architecture Paris Malaquais, Franc
 The antique concept of permanent Cosmos is reintroduced as a perfect deterministic Computer, inverting the anthropic principle, and interpretating the physical dimensionless parameters as optimal calculation basis. The later are unified in the Topological Axis, which rehabilitates the string theory dimension series 4k+2, with emphasis on the values 26 (visible Universe) and 10 (Hydrogen - Pion couple). The 1D extension of the holographic principle, defining Grandcosmos, breaks the Planck wall by a factor $10^{61}$, resolving the vacuum energy dilemma. 
 %An holographic scanning explains at last the Universe vastness, justifying the pertinence of large numbers, such as the %Eddington's one, which is the number of neutrons in the trivial ratio 3/10 of the visible Universe, so justifying black matter %existence. 
 %The galaxy recession and the massive black holes are both associated to the second thermodynamics principle. The supercycle %period is given by the dimensional analysis, and linked to the holic dimension 30 and, throught the Monster group order, to %the Kotov's absolute clock period. This confirms the matter-antimatter Oscillatory Bounce (frequency $10^{104}$~Hz), unifying %the standard Single Bang cosmology with the Steady-State one, and the return to the Newton's absolute space-time, realized by %the cosmic microwave Grandcosmos radiation. 
-The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's constant. Koide relation, massive gluons and composite d quark will deblock Particle Physics and mature galaxies will replace dark space, ruining thus the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
+The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, implying the Eddington's constant 137 and the Atiyah's constant. Quantized time, Kotov's period, Koide relation, massive gluons and composite d quark will deblock Particle Physics while mature galaxies will be found in the far-field, with no dark space, excluding the standard evolutionary cosmology, ill-founded on the imperfect cosmological principle.
 
 %% TODO: Insérer axe topologique
 }}\smallskip
@@ -121,17 +121,15 @@ PLAN
  
 ~~~    9.1. Otimal Basis $e$ confirmed
    
-~~~    9.2. Wyler's Approach
+~~~    9.2. Lenz-Wyler's Formula
    
-~~~    9.3. Archimedes
+~~~    9.3. Archimedes constant $\pi$
    
-~~~    9.4. Electroweak
+~~~    9.4. Electroweak Fine Tuning
    
-~~~    9.5. Heavy Leptons
+~~~    9.5. Heavy Leptons Fine Tuning
    
-~~~    9.6. Gravitation
-   
-~~~    9.7. The central role of atiyah's constant
+~~~    9.6. Gravitation Fine Tuning
    
  10. Discussion
  
@@ -1002,36 +1000,41 @@ and recall that whole powers of $\pi$ appears also in the even order Riemann ser
 
 \subsection {The electroweak constant mathematical fine tuning}
 The Particle standard model achieved the unification between electromagnetism and weak
-nuclear force. Looking for relations involving $a$, 137, $a_{w}$, the intermediate bosons $W$ et $Z$ and the mathematical constants, the computer indicates, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$:
+nuclear force. Looking for relations involving $a_{w}$ and the intermediate bosons ratios $W$ et $Z$, the computer indicates, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$:
 \begin{equation}
-W \approx \gamma a 137^{2} / 3\pi d_{e}
+a_{w} = (137 \times 2 \Gamma)^{3}
+\end{equation}
+or, equivalently, with 
+\begin{equation}
+W \approx 137^{2} \Gamma / 3d_{e}
 \end{equation}
 \begin{equation}
-Z \approx ap^{2} \pi^{4} / 137 d_{e} n
+( \Gamma F/\gamma d_{e})^{1/3} \approx 4n^{\prime} / \Gamma
 \end{equation}
-Considering the above values, Eq (1) 
-%%\begin{equation}
-%%R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}
-%%\end{equation}
-matches the above $G$ value in the ppb range. Moreover:
-\begin{equation}
-a_{w} \approx (2\gamma 137 a/\pi)^{3}
-\end{equation}
-Now, by introducing the featured length $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$, the electroweak constant appears as
+or, equivalently, with the length $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$, the electroweak constant appears as
 a cube $a_{w} \approx (\lambdabar_{e}/l_{eF})^{3}$ , yielding to:
 \begin{equation}
 \lambdabar/l_{eF} \approx 2\gamma 137 a/\pi
 \end{equation}
-see below how this formulae simplifies again by using the Atiyah Constant.
-
-
-\subsection {The Muon and Tau fine tuning}
-
-Admitting the above relation, one defines 
+This leads to Admitting the above relation, one defines 
 \begin{equation} 
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \end{equation}
-within its 0.25 ppm indetermination. 
+textit{within its 0.25 ppm indetermination}.  
+As ror the weak bosons, the values
+\begin{equation}
+W \approx \gamma a 137^{2} / 3\pi d_{e}
+\end{equation}
+and
+\begin{equation}
+Z \approx ap^{2} \pi^{4} / 137 d_{e} n
+\end{equation}
+match the above relation, (Eq. 1) textit{in the ppb range}: 
+\begin{equation}
+R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}
+\end{equation}
+
+\subsection {The Muon and Tau fine tuning}
 
 Another fine-tuning ties the muon, proton and Hydrogen masses: 
 \begin{equation}
@@ -1088,9 +1091,6 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 \end{equation}
 where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
 
-%%\subsection {The Intermediate Bosons mathematical fine tuning}
-
-
 \subsection {The Gravitational Constant fine-tuning}
 
 Computer analysis shows also the following ppb precise extension for the deviation between $2^{127}$ and
@@ -1108,17 +1108,7 @@ the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.
 development of $\pi$ is to this date an unsolved problem, it confirms that current mathematics is
 incomplete and that Nature uses rational approximations for $\pi$.
 
-\subsection {The central role of Atiyah constant}
-This constant $\Gamma$ clarifies some of the above expressions:
-\begin{equation}
-a_{w} = (137 \times 2 \Gamma)^{3}
-\end{equation}
-\begin{equation}
-W \approx 137^{2} \Gamma / 3d_{e}
-\end{equation}
-\begin{equation}
-( \Gamma F/\gamma d_{e})^{1/3} \approx 4n^{\prime} / \Gamma
-\end{equation}
+
 and the above relation giving $a_{G}$ shows a dual form, the first one without any numerical factor:
 \begin{equation}
 ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
