--- a/main.tex
+++ b/main.tex
@@ -1000,51 +1000,53 @@ and recall that whole powers of $\pi$ appears also in the even order Riemann ser
 
 \subsection {The electroweak constant mathematical fine tuning}
 The Particle standard model achieved the unification between electromagnetism and weak
-nuclear force. Looking for relations involving $a_{w}$ and the intermediate bosons ratios $W$ et $Z$, the computer indicates, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$:
+nuclear force. Looking for relations involving $a_{w}$ and the intermediate bosons ratios $W$ et $Z$, the computer indicates, 
 \begin{equation}
 a_{w} = (137 \times 2 \Gamma)^{3}
 \end{equation}
-or, equivalently, with 
-\begin{equation}
-W \approx 137^{2} \Gamma / 3d_{e}
-\end{equation}
-\begin{equation}
-( \Gamma F/\gamma d_{e})^{1/3} \approx 4n^{\prime} / \Gamma
-\end{equation}
+
+
+
 or, equivalently, with the length $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$, the electroweak constant appears as
 a cube $a_{w} \approx (\lambdabar_{e}/l_{eF})^{3}$ , yielding to:
 \begin{equation}
 \lambdabar/l_{eF} \approx 2\gamma 137 a/\pi
 \end{equation}
-This leads to Admitting the above relation, one defines 
+This leads to
 \begin{equation} 
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \end{equation}
-textit{within its 0.25 ppm indetermination}.  
-As ror the weak bosons, the values
+textit{within its 0.25 ppm indetermination}, confirmed, textit{again in the ppb range} by:
 \begin{equation}
-W \approx \gamma a 137^{2} / 3\pi d_{e}
+( \Gamma F/\gamma d_{e})^{1/3} \approx 4n^{\prime} / \Gamma
+\end{equation}
+where $n^{\prime} = m_n/m_e^{\prime} = nH/p$ is the effective neutron mass ratio, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$. 
+
+The following weak bosons: 
+\begin{equation}
+W \approx 137^{2} \Gamma / 3d_{e}
 \end{equation}
 and
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
-match the above relation, (Eq. 1) textit{in the ppb range}: 
+match (Eq. 1), recalled here, textit{in the ppb range}: 
 \begin{equation}
 R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}
 \end{equation}
 
-\subsection {The Muon and Tau fine tuning}
-
+\subsection {The Heavy Leptons Fine Tuning}
+The standard modelis unable to explain why there are three famillies of particle. Of special importance is the study of the muon and tau mass ratioes.
 Another fine-tuning ties the muon, proton and Hydrogen masses: 
 \begin{equation}
 E_{F}/m_{e} c^{2} \approx
 m_{\mu}^{2}(m_{p} m_{H})^{1/2}/am_{e}^{3}
 \end{equation} 
-This yields to a muon relative to electron mass ratio 
+withy the above value for $F$, This yields to: 
 \begin{equation}
 \mu \approx 206.7682869
-\end{equation} within its 20 ppb measurement range.
+\end{equation} 
+textit{within its 20 ppb measurement range}.
 ne observes the Koide relation \cite{Atiyah1}, where $\mu$ and $\tau$ are the muon and tau masses relative to electron mass:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
