--- a/main.tex
+++ b/main.tex
@@ -998,25 +998,22 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 \end{equation}
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
-\subsection {The electroweak constant mathematical fine tuning}
+\subsection {The Electroweak Fine-Tuning}
 The Particle standard model achieved the unification between electromagnetism and weak
-nuclear force. Looking for relations involving $a_{w}$ and the intermediate bosons ratios $W$ et $Z$, the computer indicates, 
+nuclear force. Looking for relations involving $a_{w}$ and the intermediate bosons ratios $W$ et $Z$, the computer indicates: 
 \begin{equation}
 a_{w} = (137 \times 2 \Gamma)^{3}
 \end{equation}
-
-
-
 or, equivalently, with the length $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$, the electroweak constant appears as
-a cube $a_{w} \approx (\lambdabar_{e}/l_{eF})^{3}$ , yielding to:
+a cube $a_{w} \approx (\lambdabar_{e}/l_{eF})^{3}$, yielding to:
 \begin{equation}
-\lambdabar/l_{eF} \approx 2\gamma 137 a/\pi
+\lambdabar/l_{eF} \approx 137 \times 2\Gamma
 \end{equation}
 This leads to
 \begin{equation} 
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \end{equation}
-textit{within its 0.25 ppm indetermination}, confirmed, textit{again in the ppb range} by:
+\textit{within its 0.25 ppm indetermination}, confirmed, \textit{again in the ppb range} by:
 \begin{equation}
 ( \Gamma F/\gamma d_{e})^{1/3} \approx 4n^{\prime} / \Gamma
 \end{equation}
@@ -1104,18 +1101,16 @@ leading to:
 \begin{equation}
 (aF /\pi d_{e})^{1/3} \approx 4\pi n^{\prime}/ \gamma a
 \end{equation}
-where $n^{\prime} = nH/p$ is the principal value of the neutron mass by respect to the electron effective mass
-in the Hydrogen atom. Note that this is close (0.12\%) to the monstrous 5th term 292.6345909 in
+Note that this is close (0.12\%) to the monstrous 5th term 292.6345909 in
 the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
 development of $\pi$ is to this date an unsolved problem, it confirms that current mathematics is
 incomplete and that Nature uses rational approximations for $\pi$.
 
-
-and the above relation giving $a_{G}$ shows a dual form, the first one without any numerical factor:
+The above relation giving $a_{G}$ shows a dual form, the first one without any numerical factor:
 \begin{equation}
 ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
 \end{equation}
-Now, as was recalled previously in the Holic Principle, the exponents represent the number of
+Now, as was recalled above, the exponents represent the number of
 dimensions. So, this correlates to a dimensional reduction, eliminating 137, from 9D and 6D to
 3D, which could be associated with the superstring theory, where the equations are coherent only if space
 has 9 dimensions, and if the 6 supplementary dimensions unfold on very small distances \cite{Polchinski}.
