--- a/main.tex
+++ b/main.tex
@@ -1019,7 +1019,7 @@ F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \end{equation}
 where $n^{\prime} = m_n/m_e^{\prime} = nH/p$ is the effective neutron mass ratio, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$. 
 
-The following weak bosons: 
+The following weak boson ratios: 
 \begin{equation}
 W \approx 137^{2} \Gamma / 3d_{e}
 \end{equation}
@@ -1027,14 +1027,12 @@ and
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
-match (Eq. 1), recalled here, textit{in the ppb range}: 
-\begin{equation}
-R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}
-\end{equation}
+match (Eq. 1):
+$R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$
+\textit{in the ppb range}
 
 \subsection {The Heavy Leptons Fine Tuning}
-The standard modelis unable to explain why there are three famillies of particle. Of special importance is the study of the muon and tau mass ratioes.
-Another fine-tuning ties the muon, proton and Hydrogen masses: 
+The standard model is unable to explain why there are three famillies of particle. thus the study of the muon and tau mass ratioes is crucial. The study of Kotov prriod has emphatised the relation: 
 \begin{equation}
 E_{F}/m_{e} c^{2} \approx
 m_{\mu}^{2}(m_{p} m_{H})^{1/2}/am_{e}^{3}
@@ -1043,13 +1041,12 @@ withy the above value for $F$, This yields to:
 \begin{equation}
 \mu \approx 206.7682869
 \end{equation} 
-textit{within its 20 ppb measurement range}.
-ne observes the Koide relation \cite{Atiyah1}, where $\mu$ and $\tau$ are the muon and tau masses relative to electron mass:
+\textit{within its 20 ppb measurement range}.
+Now, the Koide relation \cite{Atiyah1}, which has a mathematical justification in term of circulating matrix, correctly predicted $\tau$ at an epoch during which its measurement was false to 3 $\sigma$. : can be wrote:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
-which has a mathematical justification in term of circulating matrix. It correctly predicted tau/electron
-mass ratio at an epoch during which its measurement was false to 3 $\sigma$. Now the Koide constant $p_K$ verifies (2 et 0.16 ppm):
+Now the Koide constant $p_K \approx 1842.604994$ verifies (2 et 0.16 ppm):
 $$ p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 (137a/136(a^{\prime}-1) d_e $$
 
 With the above $\mu$ value, $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$, resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
@@ -1060,7 +1057,7 @@ $$
 F/137 = f \sqrt{s} = \mu^2 \sqrt{pH}/a_m^2 \\ \approx a_m (p/p_0) \tau /j \approx a^{1/6}p_K \approx jp/50 
 \end{array}
 $$
-(0.7 ppm, 0.3 \%, 0.1 \%. This shows that Cosmos uses the rationalisation 137/50 for $e$. Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4  \% and 30 ppb):
+(0.7 ppm, 0.3 \%, 0.1 \%. Moreover the $20^{th}$ power of this Tifft term $F/137$ is tied to the product $\Pi_{par}$ of the 6 pariah group orders (0.4  \% and 30 ppb):
 $$ F/137 \approx \Pi_{par}^{1/20} \approx f O_M^{1/20}(a/137)^{1/10}\beta^{1/5}$$ 
 
  With the classical electron radius $r_e = \lambdabar_e/a$, $p_K$ enters Eq.(11) (0.5, 17 and 40 ppm):
@@ -1069,8 +1066,7 @@ r_{e}/\lambdabar_M \approx(4\pi P/p_K)^4 \approx (R_1l_K/R^{\prime}r_e)^3 \appro
 \end{equation}
 confirming the above BEH ratio $s$ and relying with the Monstrer orders product $O_MO_B/\sqrt{2}$ (see Eq.(44))
 
-
-The above Koide constant $p_K \approx 1842.604994$ connects with the above Moonshine Monster dimension \cite{Conway} $D = 196883$, to 48, 10, 13, 26 ppm:
+The above Koide constant $p_K$ connects also with the above Moonshine Monster dimension \cite{Conway} $D = 196883$, to 48, 10, 13, 26 ppm:
 $$137/8 \approx p^2/D  \approx (p_K/2\pi)^{1/2} \approx 137^{1/\sqrt3} \approx p^{1/\sqrt7}$$
 
 Moreover $\tau$ correlates with the
@@ -1106,7 +1102,7 @@ the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.
 development of $\pi$ is to this date an unsolved problem, it confirms that current mathematics is
 incomplete and that Nature uses rational approximations for $\pi$.
 
-The above relation giving $a_{G}$ shows a dual form, the first one without any numerical factor:
+These relations show a dual form, the first one without any numerical factor:
 \begin{equation}
 ap_{G} / \pi \sqrt(pH) \approx (n F/137^{2} \Gamma^{3} )^{3} \approx (4n/ \Gamma)^{3}/F
 \end{equation}
