--- a/main.tex
+++ b/main.tex
@@ -123,13 +123,13 @@ PLAN
    
 ~~~    9.2. Lenz-Wyler's Formula
    
-~~~    9.3. Archimedes constant $\pi$
+~~~    9.3. Archimedes constant $\pi$ is a calculation basis
    
-~~~    9.4. Electroweak Fine Tuning
+~~~    9.4. Electroweak ppb Fine Tuning
    
-~~~    9.5. Heavy Leptons Fine Tuning
+~~~    9.5. Heavy Leptons ppb Fine Tuning
    
-~~~    9.6. Gravitation Fine Tuning
+~~~    9.6. Gravitation ppb Fine Tuning
    
  10. Discussion
  
@@ -943,10 +943,7 @@ exhibiting the following property (0.3 ppm):
  $$ (a/137)^{420} \approx (137 - 3)/120 $$  
 with $137 - 3 = 7 + 127$ are the Combinatorial Hierarchy terms, 
 
-
-
-
-\subsection {Wyler's approach}
+\subsection {Lenz-Wyler's Formula}
 Armand Wyler singularized a value approaching $a$ to 0.6 ppm and confirmed the pertinence
 of the Lenz approximation which plays a central role above: $p_{0} = 6\pi^{5}$ approaching $p$ to 18.824 ppm.
 
@@ -975,7 +972,7 @@ a formula largely diffused on the web, but without indication of its origin. Now
 $$w^{e^w+1} \approx \sqrt{ad\sqrt{n/p}}R_{GC}/\lambdabar_e $$
 This confirms that the Planck thermal law will play a central importance in the future fundamental theory. 
 
-\subsection {The Archimedes constant $\pi$ as a calculation basis}
+\subsection {Archimedes constant $\pi$ is a calculation basis}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult,\textit{Back to Cosmos}}
 
 The value of the Topological Function for the main String
@@ -998,7 +995,7 @@ a \approx 4\pi^{3} + \pi^{2} + \pi \approx \pi^{9/2}2^{-1/3}
 \end{equation}
 and recall that whole powers of $\pi$ appears also in the even order Riemann series.
 
-\subsection {The Electroweak Fine-Tuning}
+\subsection {The Electroweak ppb Fine-Tuning}
 The Particle standard model achieved the unification between electromagnetism and weak
 nuclear force. Looking for relations involving $a_{w}$ and the intermediate bosons ratios $W$ et $Z$, the computer indicates: 
 \begin{equation}
@@ -1017,13 +1014,12 @@ F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \begin{equation}
 ( \Gamma F/\gamma d_{e})^{1/3} \approx 4n^{\prime} / \Gamma
 \end{equation}
-where $n^{\prime} = m_n/m_e^{\prime} = nH/p$ is the effective neutron mass ratio, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$. 
+where $n^{\prime} = m_n/m_e^{\prime} = nH/p$ is the effective neutron mass ratio, with the neutron/electron mass ratio $n \approx 1838.68366089(17)$. \textit{Final theory cannot avoid these relations} 
 
 The following weak boson ratios: 
 \begin{equation}
 W \approx 137^{2} \Gamma / 3d_{e}
 \end{equation}
-and
 \begin{equation}
 Z \approx ap^{2} \pi^{4} / 137 d_{e} n
 \end{equation}
@@ -1031,7 +1027,7 @@ match (Eq. 1):
 $R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$
 \textit{in the ppb range}
 
-\subsection {The Heavy Leptons Fine Tuning}
+\subsection {The Heavy Leptons ppb Fine Tuning}
 The standard model is unable to explain why there are three famillies of particle. thus the study of the muon and tau mass ratioes is crucial. The study of Kotov prriod has emphatised the relation: 
 \begin{equation}
 E_{F}/m_{e} c^{2} \approx
@@ -1042,7 +1038,7 @@ withy the above value for $F$, This yields to:
 \mu \approx 206.7682869
 \end{equation} 
 \textit{within its 20 ppb measurement range}.
-Now, the Koide relation \cite{Atiyah1}, which has a mathematical justification in term of circulating matrix, correctly predicted $\tau$ at an epoch during which its measurement was false to 3 $\sigma$. : can be wrote:
+Now, the Koide relation \cite{Koide}, which has a mathematical justification in term of circulating matrix, correctly predicted $\tau$ at an epoch during which its measurement was false to 3 $\sigma$. It can be wrote:
 \begin{equation}
 (1 + \mu + \tau)/2 = (1 + \sqrt\mu + \sqrt\tau)^2/3 = p_K
 \end{equation}
@@ -1086,8 +1082,7 @@ These numbers enters the following dramatic series, to 1 ppm, 56 ppm, and 13 ppm
 \end{equation}
 where $s \approx (F/af)^2 \approx 496^2 $ is compatible with the mass ratio Brout-Englert-Higgs-Boson/Electron, corresponding to 125.6 GeV, and, in the Topological Axis to $k \approx \pi $, and $n \approx \gamma \Gamma$ (Fig. 1).
 
-\subsection {The Gravitational Constant fine-tuning}
-
+\subsection {The Gravitational ppb Fine-Tuning}
 Computer analysis shows also the following ppb precise extension for the deviation between $2^{127}$ and
 $a_{G}$ ,
 \begin{equation}
