--- a/main.tex
+++ b/main.tex
@@ -1027,13 +1027,13 @@ match (Eq. 1):
 $R/\sqrt(\lambdabar_{p} \lambdabar_{H} ) \approx (WZ)^{4}$
 \textit{in the ppb range}
 
-\subsection {The Heavy Leptons ppb Fine Tuning}
-The standard model is unable to explain why there are three famillies of particle. thus the study of the muon and tau mass ratioes is crucial. The study of Kotov prriod has emphatised the relation: 
+\subsection {The Heavy Leptons ppb Fine-Tuning}
+The standard model is unable to explain why there are three famillies of particle. thus the study of the muon and tau mass ratioes is crucial. The study of Kotov period shows: 
 \begin{equation}
 E_{F}/m_{e} c^{2} \approx
 m_{\mu}^{2}(m_{p} m_{H})^{1/2}/am_{e}^{3}
 \end{equation} 
-withy the above value for $F$, This yields to: 
+With the above value for $F$, this yields to: 
 \begin{equation}
 \mu \approx 206.7682869
 \end{equation} 
@@ -1045,7 +1045,7 @@ Now, the Koide relation \cite{Koide}, which has a mathematical justification in 
 Now the Koide constant $p_K \approx 1842.604994$ verifies (2 et 0.16 ppm):
 $$ p_K^4 \approx (4\pi)^4 apH \approx (pH)^2 (137a/136(a^{\prime}-1) d_e $$
 
-With the above $\mu$ value, $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$, resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
+With the above $\mu$ value, $\tau \approx 3477.441701$, which obeys, to 0.7 and -0.8 ppm: $$e^{e^e}/a e^e \approx (F/137)^{3}/ (\mu\tau/j)^2 \approx  \sqrt{pH} (p/p_0)^2$$ resulting from the elimination of $a_m = \sqrt{137a}$ in the following extension of the above relation defining $\mu$, giving a central role to the Tifft ratio $F/137$, and so defining the Brout-Englert-Higgs ratio $s$:
 $$
 \begin{array}{ll}
 %
