--- a/main.tex
+++ b/main.tex
@@ -76,6 +76,9 @@ The mathematics-physics fusion is confirmed by $10^{-9}$ precise relations, impl
 
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}{\thepage}
 
+
+\tableofcontents
+
 PLAN
 %This article is separated in 3 sections, corresponding to 3 classes of mathematical constants, the large, the intermediate and %the small, close to unity. The optimal computation basis $e$ is used all along, in particular as the primary basis of the %Topological Axis Function f\{n\} = exp(2$^{n/4}$), the secondary basis being 2, the simplest of all (Fig. 1).
 
